Avoid changing page aspect when hiding window scrollbar

--- a/platform-ui-skin/src/main/webapp/skin/less/vuetify/vuetify-all.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/vuetify/vuetify-all.less
@@ -259,10 +259,6 @@
   z-index: 2000 !important;
 }
 
-.hide-scroll {
-  overflow: hidden;
-}
-
 @media (max-width : 959px) {
   .VuetifyApp .v-application {
     .uiPopup.v-dialog:not(.v-dialog--fullscreen) .v-card__text {
